--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!-- saved from url=(0059)http://strut.io/editor/preview_export/impress.html#/step-19 -->
+<!-- saved from url=(0059)http://strut.io/editor/preview_export/impress.html#/step-21 -->
 <html style="height: 100%;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no">
@@ -200,6 +200,26 @@ ready(function() {
 		
 	
 
+	
+		
+		
+	
+
+	
+		
+		
+	
+
+	
+		
+		
+	
+
+	
+		
+		
+	
+
 </style>
 <!-- This is a work around / hack to get the user's browser to download the fonts 
  if they decide to save the presentation. -->
@@ -223,8 +243,8 @@ ready(function() {
 </div>
 
 <div class="bg bg-custom-799ecd strut-surface">
-<div class="bg innerBg strut-slide-18 bg-custom-799ecd">
-<div id="impress" style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 250ms; -webkit-transition: all 500ms ease-in-out 250ms; transform-style: preserve-3d; top: 50%; left: 50%; transform: perspective(3846.41068447412px) scale(0.259982638888889);"><div style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 0ms; -webkit-transition: all 500ms ease-in-out 0ms; transform-style: preserve-3d; transform: rotateZ(0deg) rotateY(0deg) rotateX(0deg) translate3d(-13380.2666666667px, -9830.4px, 0px);">
+<div class="bg innerBg strut-slide-20 bg-custom-799ecd">
+<div id="impress" style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 250ms; -webkit-transition: all 500ms ease-in-out 250ms; transform-style: preserve-3d; top: 50%; left: 50%; transform: perspective(3846.41068447412px) scale(0.259982638888889);"><div style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 0ms; -webkit-transition: all 500ms ease-in-out 0ms; transform-style: preserve-3d; transform: rotateZ(0deg) rotateY(0deg) rotateX(0deg) translate3d(-1911.46666666667px, -12610.56px, 0px);">
 	
 		
 			<div class="step future" data-state="strut-slide-0 bg-custom-799ecd " data-x="1911.4666666666667" data-y="1536" data-scale="3" id="step-1" style="position: absolute; transform: translate(-50%, -50%) translate3d(1911.46666666667px, 1536px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
@@ -653,11 +673,11 @@ transform: scale(1, 1)">
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
 <div style="font-size: 34px;" class="antialias">
-<i><font face="Lato">"The Oculus Rift requires the scene to be rendered in <b>split-screen stereo</b> <br>with half the screen used for each
-</font>eye. When using the Rift, the left eye <br>sees the left half of the screen, and the right eye sees the right half.
+"The Oculus Rift requires the scene to be rendered in <b>split-screen stereo</b> <br>with half the screen used for each
+eye. When using the Rift, the left eye <br>sees the left half of the screen, and the right eye sees the right half.
 <br>Although varying from person-to-person, human eye pupils are <br>approximately 65 mm apart. This is known
 as <b>interpupillary distance</b> <br>(IPD). The in-application cameras should be configured with the same <br>separation..."<br>"...This means that your application will need to <b>render the
-&nbsp;entire scene <br>twice</b>, once with the left virtual camera, and once with the right."</i><br>
+&nbsp;entire scene <br>twice</b>, once with the left virtual camera, and once with the right."<br>
 </div>
 </div>
 </div>
@@ -1025,13 +1045,13 @@ transform: scale(0.58, 0.58)">
 		</div>
 	
 		
-			<div class="step present active" data-state="strut-slide-18 bg-custom-799ecd " data-x="13380.266666666666" data-y="9830.4" data-scale="3" id="step-19" style="position: absolute; transform: translate(-50%, -50%) translate3d(13380.2666666667px, 9830.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-18 bg-custom-799ecd " data-x="13380.266666666666" data-y="9830.4" data-scale="3" id="step-19" style="position: absolute; transform: translate(-50%, -50%) translate3d(13380.2666666667px, 9830.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-solid-sky slideContainer strut-slide-18" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
 			</div>
 			
-			<div class="componentContainer " style="top: -8px; left: 43px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+			<div class="componentContainer " style="top: -9px; left: 43px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
 <div class="transformContainer" style="-webkit-transform: scale(1, 1);
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
@@ -1073,7 +1093,136 @@ transform: scale(1, 1)">
 		
 		</div>
 	
-	<div id="overview" class="step future" data-state="strut-slide-overview" data-x="9557.333333333334" data-y="5683.2" data-scale="9" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 5683.2px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(9); transform-style: preserve-3d;"></div>
+		
+			<div class="step future" data-state="strut-slide-19 bg-custom-799ecd " data-x="17203.2" data-y="9830.4" data-scale="3" id="step-20" style="position: absolute; transform: translate(-50%, -50%) translate3d(17203.2px, 9830.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-19" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 9px; left: 42px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 72px;" class="antialias">
+<font face="League Gothic, sans-serif">Rift_middleware</font><br>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 122px; left: 46px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato">This class allows the software to communicate with the Oculus<br>Rift, in particular it has these methods:<br><ul><li><span style="line-height: normal;">A constructor, that estabilishes the connection with the Oculus<br>using the official SDK. In case no device is connected, a virtual one<br>is used instead.</span></li><li><span style="line-height: normal;">A destructor that takes care of closing the connection</span></li><li><span style="line-height: normal;">Getters, to interrogate about parameters such as lens center,<br>texture size and FOV</span></li><li><span style="line-height: normal;">The most important <br>one is the <b>getHeadpose</b>, <br>that returns the current<br>orientation of the <br>headset.</span></li></ul></font>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 434px; left: 436px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 582px; height: 294.87px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.86, 0.86);
+-moz-transform: scale(0.86, 0.86);
+transform: scale(0.86, 0.86)">
+<img src="./Deck Title_files/eTBcd3T.png">
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step present active" data-state="strut-slide-20 bg-custom-799ecd " data-x="1911.4666666666667" data-y="12610.56" data-scale="3" id="step-21" style="position: absolute; transform: translate(-50%, -50%) translate3d(1911.46666666667px, 12610.56px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-20" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: -0.35px; left: 34px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 72px;" class="antialias">
+<font face="League Gothic, sans-serif">Main</font><br>
+</div>
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 88px; left: 32.35px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 34px;" class="antialias">
+<font face="Lato">This class has the main method, which: <br><ul><li><span style="line-height: normal;">Initializes the graphical context using the SmartVolume class</span></li><li>Creates the rendering pipeline that is going to be used with the <br>StereoDistortPass
+ (setting the distortion parameters).</li><li>Creates a callback which is called every 16 milliseconds that<br>uses the rift_middleware class to get the head orientation,<br>applying it to the camera.</li></ul></font><br><br>
+</div>
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step future" data-state="strut-slide-21 bg-custom-799ecd " data-x="5734.4" data-y="12595.2" data-scale="3" id="step-22" style="position: absolute; transform: translate(-50%, -50%) translate3d(5734.4px, 12595.2px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-solid-sky slideContainer strut-slide-21" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 189px; left: 24px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 981px; height: 551.54px;">
+<div class="transformContainer" style="-webkit-transform: scale(0.72, 0.72);
+-moz-transform: scale(0.72, 0.72);
+transform: scale(0.72, 0.72)">
+<img src="./Deck Title_files/MNGdFy6.png">
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 13px; left: 33px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 72px;" class="antialias">
+<font face="League Gothic, sans-serif">Final Result</font><br>
+</div>
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step future" data-state="strut-slide-22 bg-custom-799ecd " data-x="9557.333333333334" data-y="12595.2" data-scale="3" id="step-23" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 12595.2px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class=" slideContainer strut-slide-22" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer " style="top: 108px; left: 26px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 958px; height: 526.76px;">
+<div class="transformContainer" style="-webkit-transform: scale(1.4, 1.4);
+-moz-transform: scale(1.4, 1.4);
+transform: scale(1.4, 1.4)">
+<img src="./Deck Title_files/ZShEGZC.png">
+</div>
+</div>
+			
+			<div class="componentContainer " style="top: 1px; left: 360px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 72px;" class="antialias">
+<font face="League Gothic, sans-serif">Class Diagram</font><br>
+</div>
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+	<div id="overview" class="step future" data-state="strut-slide-overview" data-x="9557.333333333334" data-y="7073.28" data-scale="9" style="position: absolute; transform: translate(-50%, -50%) translate3d(9557.33333333333px, 7073.28px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(9); transform-style: preserve-3d;"></div>
 	
 </div></div>
 <div class="hint">
