--- a/ia/index.html
+++ b/ia/index.html
@@ -1,5 +1,5 @@
 
-<!-- saved from url=(0059)http://strut.io/editor/preview_export/impress.html#/step-28 -->
+<!-- saved from url=(0059)http://strut.io/editor/preview_export/impress.html#/step-26 -->
 <html style="height: 100%;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no">
@@ -279,8 +279,8 @@ ready(function() {
 </div>
 
 <div class="bg bg-custom-bed0df strut-surface">
-<div class="bg innerBg strut-slide-27 bg-custom-bed0df">
-<div id="impress" style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 250ms; transform-style: preserve-3d; top: 50%; left: 50%; transform: perspective(3698.23px) scale(0.270399);"><div style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 0ms; transform-style: preserve-3d; transform: rotateZ(0deg) rotateY(0deg) rotateX(0deg) translate3d(-13926.4px, -17510.4px, 0px);">
+<div class="bg innerBg strut-slide-25 bg-custom-bed0df">
+<div id="impress" style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 250ms; transform-style: preserve-3d; top: 50%; left: 50%; transform: perspective(3698.23px) scale(0.270399);"><div style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 0ms; transform-style: preserve-3d; transform: rotateZ(0deg) rotateY(0deg) rotateX(0deg) translate3d(-6280.53px, -17510.4px, 0px);">
 	
 		
 			<div class="step future" data-state="strut-slide-0 bg-custom-bed0df " data-x="2443.9466666666667" data-y="2780.16" data-scale="3" id="step-1" style="position: absolute; transform: translate(-50%, -50%) translate3d(2443.95px, 2780.16px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
@@ -289,11 +289,11 @@ ready(function() {
 			
 			</div>
 			
-			<div class="componentContainer testo" style="top: 36px; left: 195px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+			<div class="componentContainer testo" style="top: 60px; left: 260px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
 <div class="transformContainer" style="-webkit-transform: scale(1, 1);
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
-<div style="font-size: 173px;" class="antialias">
+<div style="font-size: 143px;" class="antialias">
 <font color="#eeeeee" face="League Gothic, sans-serif">Deep Neural<br><div style="text-align: center;">Networks</div></font>
 </div>
 </div>
@@ -330,7 +330,7 @@ transform: scale(1, 1)">
 </div>
 </div>
 			
-			<div class="componentContainer testo" style="top: 100px; left: 42px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+			<div class="componentContainer testo" style="top: 100px; left: 80px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
 <div class="transformContainer" style="-webkit-transform: scale(1, 1);
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
@@ -479,11 +479,11 @@ transform: scale(1, 1)">
 			
 			</div>
 			
-			<div class="componentContainer testo" style="top: 20px; left: 40px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+			<div class="componentContainer testo" style="top: 20px; left: 20px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
 <div class="transformContainer" style="-webkit-transform: scale(1, 1);
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
-<div style="font-size: 72px;" class="antialias">
+<div style="font-size: 49px;" class="antialias">
 <font color="#eeeeee" face="League Gothic, sans-serif">Computational power of Neural Networks</font><br>
 </div>
 </div>
@@ -820,7 +820,7 @@ transform: scale(0.65, 0.65)">
 			
 			</div>
 			
-			<div class="componentContainer " style="top: 160px; left: 80px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 814px; height: 452.4px;">
+			<div class="componentContainer " style="top: 220px; left: 80px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: 814px; height: 452.4px;">
 <div class="transformContainer" style="-webkit-transform: scale(1.59, 1.59);
 -moz-transform: scale(1.59, 1.59);
 transform: scale(1.59, 1.59)">
@@ -899,11 +899,11 @@ transform: scale(1, 1)">
 			
 			</div>
 			
-			<div class="componentContainer testo" style="top: 20px; left: 40px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+			<div class="componentContainer testo" style="top: 20px; left: 20px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
 <div class="transformContainer" style="-webkit-transform: scale(1, 1);
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
-<div style="font-size: 72px;" class="antialias">
+<div style="font-size: 47px;" class="antialias">
 <font color="#eeeeee" face="League Gothic, sans-serif">Applications in Artificial Intelligence</font><br>
 </div>
 </div>
@@ -1220,7 +1220,7 @@ transform: scale(0.61, 0.61)">
 <div class="transformContainer" style="-webkit-transform: scale(1, 1);
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
-<div style="font-size: 72px;" class="antialias">
+<div style="font-size: 63px;" class="antialias">
 <font color="#eeeeee" face="League Gothic, sans-serif">Deep Style</font><br>
 </div>
 </div>
@@ -1241,8 +1241,29 @@ transform: scale(1, 1)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-25 bg-custom-bed0df " data-x="6280.533333333334" data-y="17510.4" data-scale="3" id="step-26" style="position: absolute; transform: translate(-50%, -50%) translate3d(6280.53px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step present active" data-state="strut-slide-25 bg-custom-bed0df " data-x="6280.533333333334" data-y="17510.4" data-scale="3" id="step-26" style="position: absolute; transform: translate(-50%, -50%) translate3d(6280.53px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-custom-1774d0 slideContainer strut-slide-25" style="width: 1024px; height: 768px;">
+			<div class="themedArea">
+			
+			</div>
+			
+			<div class="componentContainer testo" style="top: 40px; left: 240px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+<div class="transformContainer" style="-webkit-transform: scale(1, 1);
+-moz-transform: scale(1, 1);
+transform: scale(1, 1)">
+<div style="font-size: 145px;" class="antialias">
+<div style="text-align: center;"><span style="color: rgb(238, 238, 238); font-family: &quot;League Gothic&quot;, sans-serif;">Thank you&nbsp;</span></div><font color="#eeeeee" face="League Gothic, sans-serif"><div style="text-align: center;">for listening</div></font>
+</div>
+</div>
+</div>
+			
+			</div>
+		
+		</div>
+	
+		
+			<div class="step future" data-state="strut-slide-26 bg-custom-bed0df " data-x="10103.466666666667" data-y="17510.4" data-scale="3" id="step-27" style="position: absolute; transform: translate(-50%, -50%) translate3d(10103.5px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-custom-1774d0 slideContainer strut-slide-26" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
 			</div>
@@ -1280,8 +1301,8 @@ transform: scale(0.55, 0.55)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-26 bg-custom-bed0df " data-x="10103.466666666667" data-y="17510.4" data-scale="3" id="step-27" style="position: absolute; transform: translate(-50%, -50%) translate3d(10103.5px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
-			<div class="bg-custom-1774d0 slideContainer strut-slide-26" style="width: 1024px; height: 768px;">
+			<div class="step future" data-state="strut-slide-27 bg-custom-bed0df " data-x="13926.4" data-y="17510.4" data-scale="3" id="step-28" style="position: absolute; transform: translate(-50%, -50%) translate3d(13926.4px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-custom-1774d0 slideContainer strut-slide-27" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
 			</div>
@@ -1319,8 +1340,8 @@ transform: scale(0.74, 0.74)">
 		</div>
 	
 		
-			<div class="step present active" data-state="strut-slide-27 bg-custom-bed0df " data-x="13926.4" data-y="17510.4" data-scale="3" id="step-28" style="position: absolute; transform: translate(-50%, -50%) translate3d(13926.4px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
-			<div class="bg-custom-1774d0 slideContainer strut-slide-27" style="width: 1024px; height: 768px;">
+			<div class="step future" data-state="strut-slide-28 bg-custom-bed0df " data-x="18022.4" data-y="17510.4" data-scale="3" id="step-29" style="position: absolute; transform: translate(-50%, -50%) translate3d(18022.4px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="bg-custom-1774d0 slideContainer strut-slide-28" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
 			</div>
@@ -1350,27 +1371,6 @@ transform: scale(1, 1)">
 -moz-transform: scale(0.79, 0.79);
 transform: scale(0.79, 0.79)">
 <img src="./index_files/Google-SyntaxNet-Parsey-McParseface-TensorFlow-Novet.png">
-</div>
-</div>
-			
-			</div>
-		
-		</div>
-	
-		
-			<div class="step future" data-state="strut-slide-28 bg-custom-bed0df " data-x="18022.4" data-y="17510.4" data-scale="3" id="step-29" style="position: absolute; transform: translate(-50%, -50%) translate3d(18022.4px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
-			<div class="bg-custom-1774d0 slideContainer strut-slide-28" style="width: 1024px; height: 768px;">
-			<div class="themedArea">
-			
-			</div>
-			
-			<div class="componentContainer testo" style="top: 60px; left: 160px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
-<div class="transformContainer" style="-webkit-transform: scale(1, 1);
--moz-transform: scale(1, 1);
-transform: scale(1, 1)">
-<div style="font-size: 205px;" class="antialias">
-<div style="text-align: center;"><span style="color: rgb(238, 238, 238); font-family: &quot;League Gothic&quot;, sans-serif;">Thank you&nbsp;</span></div><font color="#eeeeee" face="League Gothic, sans-serif"><div style="text-align: center;">for listening</div></font>
-</div>
 </div>
 </div>
 			
