--- a/ia/index.html
+++ b/ia/index.html
@@ -1,5 +1,5 @@
 
-<!-- saved from url=(0058)http://strut.io/editor/preview_export/impress.html#/step-1 -->
+<!-- saved from url=(0059)http://strut.io/editor/preview_export/impress.html#/step-29 -->
 <html style="height: 100%;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no">
@@ -279,17 +279,17 @@ ready(function() {
 </div>
 
 <div class="bg bg-custom-bed0df strut-surface">
-<div class="bg innerBg strut-slide-0 bg-custom-bed0df">
-<div id="impress" style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 250ms; transform-style: preserve-3d; top: 50%; left: 50%; transform: perspective(3698.23px) scale(0.270399);"><div style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 0ms; transform-style: preserve-3d; transform: rotateZ(0deg) rotateY(0deg) rotateX(0deg) translate3d(-2443.95px, -2780.16px, 0px);">
+<div class="bg innerBg strut-slide-28 bg-custom-bed0df">
+<div id="impress" style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 250ms; transform-style: preserve-3d; top: 50%; left: 50%; transform: perspective(3698.23px) scale(0.270399);"><div style="position: absolute; transform-origin: left top 0px; transition: all 500ms ease-in-out 0ms; transform-style: preserve-3d; transform: rotateZ(0deg) rotateY(0deg) rotateX(0deg) translate3d(-18022.4px, -17510.4px, 0px);">
 	
 		
-			<div class="step present active" data-state="strut-slide-0 bg-custom-bed0df " data-x="2443.9466666666667" data-y="2780.16" data-scale="3" id="step-1" style="position: absolute; transform: translate(-50%, -50%) translate3d(2443.95px, 2780.16px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step future" data-state="strut-slide-0 bg-custom-bed0df " data-x="2443.9466666666667" data-y="2780.16" data-scale="3" id="step-1" style="position: absolute; transform: translate(-50%, -50%) translate3d(2443.95px, 2780.16px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-custom-1774d0 slideContainer strut-slide-0" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
 			</div>
 			
-			<div class="componentContainer testo" style="top: 20px; left: 220px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+			<div class="componentContainer testo" style="top: 20px; left: 180px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
 <div class="transformContainer" style="-webkit-transform: scale(1, 1);
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
@@ -1358,18 +1358,18 @@ transform: scale(0.79, 0.79)">
 		</div>
 	
 		
-			<div class="step future" data-state="strut-slide-28 bg-custom-bed0df " data-x="18022.4" data-y="17510.4" data-scale="3" id="step-29" style="position: absolute; transform: translate(-50%, -50%) translate3d(18022.4px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
+			<div class="step present active" data-state="strut-slide-28 bg-custom-bed0df " data-x="18022.4" data-y="17510.4" data-scale="3" id="step-29" style="position: absolute; transform: translate(-50%, -50%) translate3d(18022.4px, 17510.4px, 0px) rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(3); transform-style: preserve-3d;">
 			<div class="bg-custom-1774d0 slideContainer strut-slide-28" style="width: 1024px; height: 768px;">
 			<div class="themedArea">
 			
 			</div>
 			
-			<div class="componentContainer testo" style="top: 40px; left: 240px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
+			<div class="componentContainer testo" style="top: 40px; left: 200px; -webkit-transform:   ; -moz-transform:   ; transform:   ; width: px; height: px;">
 <div class="transformContainer" style="-webkit-transform: scale(1, 1);
 -moz-transform: scale(1, 1);
 transform: scale(1, 1)">
 <div style="font-size: 145px;" class="antialias">
-<div style="text-align: center;"><span style="color: rgb(238, 238, 238); font-family: &quot;League Gothic&quot;, sans-serif;">Thank you&nbsp;</span></div><font color="#eeeeee" face="League Gothic, sans-serif"><div style="text-align: center;">for listening</div></font>
+<div style="text-align: left;"><span style="color: rgb(238, 238, 238); font-family: &quot;League Gothic&quot;, sans-serif;">Thank you&nbsp;</span></div><font color="#eeeeee" face="League Gothic, sans-serif"><div style="text-align: left;">for listening</div></font>
 </div>
 </div>
 </div>
